# felloe

./: .releaserc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml  rust.yml
Chocolatey/: .bash_history  felloe.nuspec  update.ps1
Chocolatey/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1
Formula/: felloe.rb
src/: cli.rs  commands.rs  constants.rs  lib.rs  main.rs  progress.rs  release.rs  structs.rs
