[package]
name = "felloe"
version = "0.1.0"
authors = ["Dillon Lees <ddlees@us.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
exitfailure = "0.5"
failure = "0.1"
clap-log-flag = "0.2"
log = "0.4.8"
env_logger = "0.7"
sha2 = "0.8"
dirs = "2.0"
flate2 = "1.0"
tar = "0.4"
reqwest = "0.9"
tokio-core = "0.1"
futures = "0.1"

[dependencies.indicatif]
version = "0.13"
features = ["with_rayon"]

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
