[package]
name = "felloe"
description = "Interactive helm version management"
version = "0.1.1"
homepage = "https://github.com/ddlees/felloe"
license = "Apache-2.0 OR MIT"
authors = ["Dillon Lees <ddlees@us.ibm.com>"]
readme = "README.md"
keywords = ["helm", "kubernetes", "version", "management", "tiller"]
categories = ["command-line-utilities"]
edition = "2018"
build = "build.rs"
include = [
    "**/*.rs",
    "images",
    "Cargo.toml",
    "Cargo.lock",
    "CHANGELOG.md",
    "LICENSE",
    "README.md"
]

[dependencies]
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
exitfailure = "0.5"
failure = "0.1"
log = "0.4.8"
env_logger = "0.7"
sha2 = "0.8"
dirs = "2.0"
flate2 = "1.0"
tar = "0.4"
reqwest = "0.9"
indicatif = "0.13"
crossterm = "0.13"
regex = "1.3"

[build-dependencies]
log = "0.4.8"
structopt = "0.3"
